--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body onload=init()>
     <header class="main-header main-container">
-        <div class="main-screen" onclick="toggleMenu()"></div>
         <div class="flex space-between align-center">
         <div class="logo">memegen</div>
         <ul class="main-nav clean-list flex space-between">
             <li>Gallery</li>
             <li>About</li>
         </ul>
+        </div>
         </header>
-        <div class="gallery grid">
+        <div class="main-container gallery grid-container">
             <img id="0" src="img/1.jpg" onclick=drawImage(this)>
             <img id="1" src="img/2.jpg" onclick=drawImage(this)>
             <img id="2" src="img/3.jpg" onclick=drawImage(this)>
@@ -38,16 +38,16 @@
             <img id="17" src="img/18.jpg" onclick=drawImage(this)>
         </div>
         <main class="main-canvas">
-        <div class="canvas-container">
+        <div hidden class="canvas-container">
             <canvas id="my-canvas" width="500" height="500" style="outline:1px solid" onclick="getText(event)"></canvas>
         </div>
-        <div class="about">
+        <div class="about main-container flex align-center space-around">
             <div class="my-image">
-                <img src="img/profile.jpeg" alt=""><img>
+                <img src="img/ran.jpg" alt=""><img>
             </div>
             <div class="about-me">
                 <h2>Ran Porath</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, velit! Harum quia nihil illum sunt minima sequi dignissimos maxime dicta!</p>
+                <p>Ran is a 2021 Coding Academy alumn and a new talent in the FS Development field</p>
                 <ul class="social-links clean-list flex">
                     <li><a class="linkedin" href="#"></a></li>
                     <li><a class="facebook" href="#"></a></li>
