--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body onload=init()>
     <header class="main-header main-container">
-        <div class="flex space-between align-center">
+        <div class="main-header flex space-between align-center">
         <div class="logo">memegen</div>
-        <ul class="main-nav clean-list flex space-between">
-            <li>Gallery</li>
-            <li>About</li>
+        <ul class="main-nav clean-list flex space-around">
+            <li class="nav-item"><a href="#">Gallery</a></li>
+            <li class="nav-item"><a href="#about">About</a></li>
+            
         </ul>
         </div>
         </header>
@@ -42,10 +43,10 @@
             <canvas id="my-canvas" width="500" height="500" style="outline:1px solid" onclick="getText(event)"></canvas>
         </div>
         <div class="about main-container flex align-center space-around">
-            <div class="my-image">
+            <div class="my-image justify-end">
                 <img src="img/ran.jpg" alt=""><img>
             </div>
-            <div class="about-me">
+            <div id="about" class="about-me">
                 <h2>Ran Porath</h2>
                 <p>Ran is a 2021 Coding Academy alumn and a new talent in the FS Development field</p>
                 <ul class="social-links clean-list flex">
