--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,64 +8,68 @@
     <title>MemeGen</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body onload=init()>
     <header class="main-header main-container">
         <div class="main-header flex space-between align-center">
-        <div class="logo">memegen</div>
-        <ul class="main-nav clean-list flex space-around">
-            <li class="nav-item"><a href="#">Gallery</a></li>
-            <li class="nav-item"><a href="#about">About</a></li>
-            
-        </ul>
+            <div class="logo">memegen</div>
+            <ul class="main-nav clean-list flex space-around">
+                <li class="nav-item"><a href="javascript:showGallery();">Gallery</a></li>
+                <li class="nav-item"><a href="javascript:showAbout();">About</a></li>
+
+            </ul>
         </div>
-        </header>
-        <div class="main-container gallery grid-container">
-            <img id="0" src="img/1.jpg" onclick=drawImage(this)>
-            <img id="1" src="img/2.jpg" onclick=drawImage(this)>
-            <img id="2" src="img/3.jpg" onclick=drawImage(this)>
-            <img id="3" src="img/4.jpg" onclick=drawImage(this)>
-            <img id="4" src="img/5.jpg" onclick=drawImage(this)>
-            <img id="5" src="img/6.jpg" onclick=drawImage(this)>
-            <img id="6" src="img/7.jpg" onclick=drawImage(this)>
-            <img id="7" src="img/8.jpg" onclick=drawImage(this)>
-            <img id="8" src="img/9.jpg" onclick=drawImage(this)>
-            <img id="9" src="img/10.jpg" onclick=drawImage(this)>
-            <img id="10" src="img/11.jpg" onclick=drawImage(this)>
-            <img id="11" src="img/12.jpg" onclick=drawImage(this)>
-            <img id="12" src="img/13.jpg" onclick=drawImage(this)>
-            <img id="13" src="img/14.jpg" onclick=drawImage(this)>
-            <img id="14" src="img/15.jpg" onclick=drawImage(this)>
-            <img id="15" src="img/16.jpg" onclick=drawImage(this)>
-            <img id="16" src="img/17.jpg" onclick=drawImage(this)>
-            <img id="17" src="img/18.jpg" onclick=drawImage(this)>
+    </header>
+    <section class="main-container gallery">
+    <div class="main-container images grid-container">
+        <img id="1" src="img/1.jpg" onclick=drawImage(this)>
+        <img id="2" src="img/2.jpg" onclick=drawImage(this)>
+        <img id="3" src="img/3.jpg" onclick=drawImage(this)>
+        <img id="4" src="img/4.jpg" onclick=drawImage(this)>
+        <img id="5" src="img/5.jpg" onclick=drawImage(this)>
+        <img id="6" src="img/6.jpg" onclick=drawImage(this)>
+        <img id="7" src="img/7.jpg" onclick=drawImage(this)>
+        <img id="8" src="img/8.jpg" onclick=drawImage(this)>
+        <img id="9" src="img/9.jpg" onclick=drawImage(this)>
+        <img id="10" src="img/10.jpg" onclick=drawImage(this)>
+        <img id="11" src="img/11.jpg" onclick=drawImage(this)>
+        <img id="12" src="img/12.jpg" onclick=drawImage(this)>
+        <img id="13" src="img/13.jpg" onclick=drawImage(this)>
+        <img id="14" src="img/14.jpg" onclick=drawImage(this)>
+        <img id="15" src="img/15.jpg" onclick=drawImage(this)>
+        <img id="16" src="img/16.jpg" onclick=drawImage(this)>
+        <img id="17" src="img/17.jpg" onclick=drawImage(this)>
+        <img id="18" src="img/18.jpg" onclick=drawImage(this)>
         </div>
-        <main class="main-canvas">
-        <div hidden class="canvas-container">
+    </section>
+    <section class="main-canvas hidden">
+        <div class="canvas-container">
             <canvas id="my-canvas" width="500" height="500" style="outline:1px solid" onclick="getText(event)"></canvas>
         </div>
+        </section>
         <div class="about main-container flex align-center space-around">
             <div class="my-image justify-end">
                 <img src="img/ran.jpg" alt=""><img>
             </div>
             <div id="about" class="about-me">
                 <h2>Ran Porath</h2>
-                <p>Ran is a 2021 Coding Academy alumn and a new talent in the FS Development field</p>
+                <p>Ran is a 2021 Coding Academy alumn and a junior Full-Stack developer</p>
                 <ul class="social-links clean-list flex">
-                    <li><a class="linkedin" href="#"></a></li>
-                    <li><a class="facebook" href="#"></a></li>
-                    <li><a class="github" href="#"></a></li>
+                    <li><a class="linkedin" href="#">Linkedin</a></li>
+                    <li><a class="facebook" href="#">Facebook</a></li>
+                    <li><a class="github" href="#">Github</a></li>
                 </ul>
             </div>
-          
+
         </div>
         <footer class="main-footer">
-            <div class="footer-container main-container flex space-between align-center">
+            <div class="footer-container main-container flex column space-between align-center">
                 <div class="logo">memegen</div>
                 <div class="copyright">all rights reserved 2021</div>
             </div>
-        </footer> 
-    </main>
+        </footer>
     <script src="js/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
 </body>
+
 </html>
