add/delete lines working

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <section class="main-canvas flex space-between align-center hidden">
         <div class="canvas-container">
-            <canvas id="my-canvas" width="500" height="500" style="outline:1px solid" onclick="getText(event)"></canvas>
+            <canvas id="my-canvas" width="500" height="500" style="outline:1px solid"></canvas>
         </div>
         <div class="toolbox flex column">
             <div class="text-input flex column">
