save to storage

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <input name="img" id="imgData" type="hidden" />
                     <button class="share-btn" type="submit">Share</button>
                 </form>
+                <button onclick="saveImg()" class="save-btn">Save</button>
             </div>
         </div>
     </section>
@@ -105,6 +106,7 @@
         </div>
     </footer>
     <script src="js/meme-service.js"></script>
+    <script src="js/storage-service.js"></script>
     <script src="js/meme-controller.js"></script>
 </body>
 
